--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTIPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="styl.css>
-</head>
-<body>
-Hlavní stránka
-</body>
+  <head>
+    <title>Ahoj</title>
+    <link rel="stylesheet" href="styl.css">
+  </head>
+  <body>
+    Hlavní stránka
+  </body>
 </html>
